Ajustes JS de lista

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
 
             
-                <button id="abrir-carrito"><i class="fas fa-shopping-cart"></i>  Cart (0 items)</button>
+                <button id="abrir-carrito"><i class="fas fa-shopping-cart"></i>  Cart (2 items)</button>
                 <div class="overlay no-mostrar" id="overlay"></div>
                 
                   <div class="carrito">
@@ -151,6 +151,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Comfy Bed</h3>
                         <p class="product-price">$22.49</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="Three stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -180,6 +181,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Oak Scratcher</h3>
                         <p class="product-price">$50.70</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="Five stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -209,6 +211,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Carrot Tree</h3>
                         <p class="product-price">$26.39</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="Two stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -238,6 +241,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Interactive Feeder</h3>
                         <p class="product-price">$20.99</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="Three stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -267,6 +271,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Bed with Removable Cover</h3>
                         <p class="product-price">$49.99</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="Five stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -296,6 +301,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Toy Bridge</h3>
                         <p class="product-price">$10.30</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="One star">
                           <i class="fas fa-star"></i>
                           <i class="far fa-star"></i>
@@ -325,6 +331,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Grass House</h3>
                         <p class="product-price">$19.99</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="Three stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -354,6 +361,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Food Maze</h3>
                         <p class="product-price">$32.50</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="Two stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -383,6 +391,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Professional Brushes Set</h3>
                         <p class="product-price">$30.25</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="Four stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -412,6 +421,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Soft Bed</h3>
                         <p class="product-price">$15.99</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="Three stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -441,6 +451,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Rope Toys Set</h3>
                         <p class="product-price">$12.30</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="Four stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -470,6 +481,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Automatic Feeder</h3>
                         <p class="product-price">$35.99</p>
+                        <p class="descripcion-producto no-mostrar">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem perferendis perspiciatis itaque esse tempora sed repellat enim officiis, consectetur sit quia pariatur. Aut enim dignissimos doloremque culpa tenetur. Possimus, quasi.</p>
                         <div class="rating" aria-label="Five stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
