--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
       </div>  
     </footer>
 
-    <div class="overlay-seccion-aside-responsive no-mostrar">
+    <div class="overlay-seccion-aside-responsive no-mostrar"></div>
       <div class="seccion-aside-responsive">
         <form class="formulario-principal" name="form-princ">
            <button id="boton-cerrar-aside-responsive" class="fas fa-times"></button>
@@ -763,7 +763,7 @@
             </div>
         </form>
       </div>
-    </div>
+    
 
   <script src="index.js"></script>  
 </body>
