margin botones header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <section class="contenedor-header">
-            <div id="contenedor-icono-header">
+            <div class="contenedor-icono-header">
                 <h1><i class="fa fa-paw" id="icono-header" aria-label="Pink paw"></i> SOFÍA'S</h1>
             </div>
 
