--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                   </button>
                 </div>
 
-                <div class="boton-responsive-filtro no-mostrar">
+                <div class="boton-responsive-filtro">
                   
                   <button type="button" class="view-btn boton-filtro">
                     <i class="fas fa-filter" aria-label="Filter icon"></i><p class="texto-filters-responsive">Filters</p>
@@ -687,7 +687,7 @@
     <div class="overlay-seccion-aside-responsive no-mostrar"></div>
       <div class="seccion-aside-responsive">
         <form class="formulario-principal" name="form-princ">
-           <button id="boton-cerrar-aside-responsive" class="fas fa-times"></button>
+           <button type="button" id="boton-cerrar-aside-responsive" class="fas fa-times"></button>
             <div class="contenedor-botones-aside-responsive-1">
                 
                 <h3 class="filtros">FILTERS</h3>
@@ -697,7 +697,7 @@
             <div class="contenedor-botones-aside-responsive-2">
                 <h3 class="buscar">SEARCH</h3>
                         <div class="contenedor-busqueda" class="boton-buscar">
-                            <input type="text" placeholder="Search products" id="buscar-productos">
+                            <input type="text" placeholder="Search products" id="buscar-productos-responsive">
                             <i class="fas fa-search" aria-label="Magnifier icon"></i>
                         </div>
             </div>
