--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -304,7 +304,7 @@
                     data-puntaje="3"
                     >
                       <div class="product-img-container">
-                        <img src="img/Products/1575022860_2_2292.jpg" alt class="product-img" />
+                        <img src="img/Products/1575022860_2_2292.jpg" alt="comfortable bed" class="product-img" />
                       </div>
                       <div class="product-body">
                         <h3 class="product-name">Comfy Bed</h3>
@@ -334,7 +334,7 @@
                     data-puntaje="5"
                     >
                       <div class="product-img-container">
-                        <img src="img/Products/large-365520_LW_CUBOX_BASE_CAT_SCRATCH_OAK.jpg" alt class="product-img"/>
+                        <img src="img/Products/large-365520_LW_CUBOX_BASE_CAT_SCRATCH_OAK.jpg" alt="wood scratcher" class="product-img"/>
                       </div>
                       <div class="product-body">
                         <h3 class="product-name">Oak Scratcher</h3>
@@ -364,7 +364,7 @@
                     data-puntaje="2"
                     >
                       <div class="product-img-container">
-                        <img src="img/Products/s-l640.jpg" class="product-img" alt/>
+                        <img src="img/Products/s-l640.jpg" class="product-img" alt="toy tree"/>
                       </div>
                       <div class="product-body">
                         <h3 class="product-name">Carrot Tree</h3>
@@ -424,7 +424,7 @@
                     data-puntaje="5"
                     >
                       <div class="product-img-container">
-                        <img src="img/Products/default.jpg" class="product-img" alt/>
+                        <img src="img/Products/default.jpg" class="product-img" alt="bed and cover"/>
                       </div>
                       <div class="product-body">
                         <h3 class="product-name">Bed with Removable Cover</h3>
@@ -454,7 +454,7 @@
                     data-puntaje="1"
                     >
                       <div class="product-img-container">
-                        <img src="img/Products/319vlKvCVcL._AC_SY400_.jpg" class="product-img" alt/>
+                        <img src="img/Products/319vlKvCVcL._AC_SY400_.jpg" class="product-img" alt="hamster bridge"/>
                       </div>
                       <div class="product-body">
                         <h3 class="product-name">Toy Bridge</h3>
@@ -484,7 +484,7 @@
                     data-puntaje="3"
                     >
                       <div class="product-img-container">
-                        <img src="img/Products/6164Uje7byL._AC_SX522_.jpg" class="product-img" alt/>
+                        <img src="img/Products/6164Uje7byL._AC_SX522_.jpg" class="product-img" alt="pet house"/>
                       </div>
                       <div class="product-body">
                         <h3 class="product-name">Grass House</h3>
@@ -544,7 +544,7 @@
                     data-puntaje="4"
                     >
                       <div class="product-img-container">
-                        <img src="img/Products/Professional-Dog-Comb-Brush-Tool-Comb-Round-Dog-Grooming-Trimmer-Antistatic-Flea-Pet-Cat-Steel-Chinese.jpg" class="product-img" alt/>
+                        <img src="img/Products/Professional-Dog-Comb-Brush-Tool-Comb-Round-Dog-Grooming-Trimmer-Antistatic-Flea-Pet-Cat-Steel-Chinese.jpg" class="product-img" alt="pet brushes"/>
                       </div>
                       <div class="product-body">
                         <h3 class="product-name">Professional Brushes Set</h3>
@@ -574,7 +574,7 @@
                     data-puntaje="3"
                     >
                       <div class="product-img-container">
-                        <img src="img/Products/41igobiNOfL._AC_.jpg" class="product-img" alt/>
+                        <img src="img/Products/41igobiNOfL._AC_.jpg" class="product-img" alt="hamster bed"/>
                       </div>
                       <div class="product-body">
                         <h3 class="product-name">Soft Bed</h3>
@@ -604,7 +604,7 @@
                     data-puntaje="4"
                     >
                       <div class="product-img-container">
-                        <img src="img/Products/817QoAR+WbL._AC_SL1500_.jpg" class="product-img" alt/>
+                        <img src="img/Products/817QoAR+WbL._AC_SL1500_.jpg" class="product-img" alt="three rope balls"/>
                       </div>
                       <div class="product-body">
                         <h3 class="product-name">Rope Toys Set</h3>
@@ -634,7 +634,7 @@
                     data-puntaje="5"
                     >
                       <div class="product-img-container">
-                        <img src="img/Products/Automatic-Rabbit-Hamster-Feeder-Water-Bottles-Dispenser-Food-Dish-Bowl-for-Guinea-Pigs-Hamster-Mice-Small.jpg" class="product-img" alt/>
+                        <img src="img/Products/Automatic-Rabbit-Hamster-Feeder-Water-Bottles-Dispenser-Food-Dish-Bowl-for-Guinea-Pigs-Hamster-Mice-Small.jpg" class="product-img" alt="hamster feeder"/>
                       </div>
                       <div class="product-body">
                         <h3 class="product-name">Automatic Feeder</h3>
