filtros funcionando responsive y desktop

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <div class="contenedor-barra-principal-productos">
                     
                   <p class="cantidad-de-productos">
-                    Showing <span id="cantidad-mostrada">12</span> product(s) of 12
+                    Showing <span class="cantidad-mostrada">12</span> product(s) of 12
                     
                   <div class="view-buttons">
                     View as
