--- a/index.html
+++ b/index.html
@@ -217,23 +217,23 @@
                       <div class="contenedor-botones-aside-3 formulario">
                           <h3>CATEGORY</h3>
                               <label for="categorias">
-                                  <input type="checkbox" name="categoria" class="categorias checkbox1" value="cats"> CATS
+                                  <input type="checkbox" name="categoria" class="categorias" value="cats"> CATS
                               </label>
                               <label for="categorias">
-                                  <input type="checkbox" name="categoria" class="categorias checkbox1" value="dogs"> DOGS
+                                  <input type="checkbox" name="categoria" class="categorias" value="dogs"> DOGS
                               </label>
                               <label for="categorias">
-                                  <input type="checkbox" name="categoria" class="categorias checkbox1" value="hamsters"> HAMSTERS
+                                  <input type="checkbox" name="categoria" class="categorias" value="hamsters"> HAMSTERS
                               </label>
                               <label for="categorias">
-                                  <input type="checkbox" name="categoria" class="categorias checkbox1" value="bunnies"> BUNNIES
+                                  <input type="checkbox" name="categoria" class="categorias" value="bunnies"> BUNNIES
                               </label>
                       </div>
                       
                       <div class="contenedor-botones-aside-4 formulario">
                           <h3>RATING</h3>
                               <label>
-                                  <input type="checkbox" name="puntaje" class="rating-checkbox checkbox1" value="5" aria-label="Five stars" alt="Five stars">
+                                  <input type="checkbox" name="puntaje" class="rating-checkbox" value="5" aria-label="Five stars" alt="Five stars">
                                   <i class="fas fa-star"></i>
                                   <i class="fas fa-star"></i>
                                   <i class="fas fa-star"></i>
@@ -241,7 +241,7 @@
                                   <i class="fas fa-star"></i> (5)
                               </label>
                               <label>
-                                  <input type="checkbox" name="puntaje" class="rating-checkbox checkbox1" value="4" aria-label="Four stars" alt="Four stars">
+                                  <input type="checkbox" name="puntaje" class="rating-checkbox" value="4" aria-label="Four stars" alt="Four stars">
                                   <i class="fas fa-star"></i>
                                   <i class="fas fa-star"></i>
                                   <i class="fas fa-star"></i>
@@ -249,7 +249,7 @@
                                   <i class="far fa-star"></i> (4)
                               </label>
                               <label>
-                                  <input type="checkbox" name="puntaje" class="rating-checkbox checkbox1" value="3" aria-label="Three stars" alt="Three stars">
+                                  <input type="checkbox" name="puntaje" class="rating-checkbox" value="3" aria-label="Three stars" alt="Three stars">
                                   <i class="fas fa-star"></i>
                                   <i class="fas fa-star"></i>
                                   <i class="fas fa-star"></i>
@@ -257,7 +257,7 @@
                                   <i class="far fa-star"></i> (3)
                               </label>
                               <label>
-                                  <input type="checkbox" name="puntaje" class="rating-checkbox checkbox1" value="2" aria-label="Two stars" alt="Two stars">
+                                  <input type="checkbox" name="puntaje" class="rating-checkbox" value="2" aria-label="Two stars" alt="Two stars">
                                   <i class="fas fa-star"></i>
                                   <i class="fas fa-star"></i>
                                   <i class="far fa-star"></i>
